--- a/kurs3_sabak8-master/web/index.html
+++ b/kurs3_sabak8-master/web/index.html
@@ -20,10 +20,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="kurs3_sabak8">
+  <meta name="apple-mobile-web-app-title" content="getx_weather_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>kurs3_sabak8</title>
+  <title>getx_weather_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
